--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ファイル共有ページ</title>
+    <title>横手いこいの森散策マップ（非公式）</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,6 +23,6 @@
 <body>
     <h1>ファイル共有ページ</h1>
     <p>以下のリンクをクリックしてファイルをダウンロードしてください。</p>
-    <a href="path/to/yourfile.zip" download>ファイルをダウンロード</a>
+    <a href="https://drive.google.com/file/d/1w_cso4MLOjTs2naXAkbVrH1MMfx364Ly/view?usp=sharing" download>ファイルをダウンロード</a>
 </body>
 </html>
