--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 <body>
     <h1>ファイル共有ページ</h1>
     <p>以下のリンクをクリックしてファイルをダウンロードしてください。</p>
-    <a href="https://drive.google.com/file/d/1w_cso4MLOjTs2naXAkbVrH1MMfx364Ly/view?usp=sharing" download>ファイルをダウンロード</a>
+    <a href="https://drive.google.com/file/d/1w_cso4MLOjTs2naXAkbVrH1MMfx364Ly/view?usp=sharing" download>横手いこいの森散策マップ.PDF</a>
 </body>
 </html>
