--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>横手いこいの森散策マップ（非公式）</title>
+    <title>　横手いこいの森散策マップ（非公式）</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -22,7 +22,7 @@
 </head>
 <body>
     <h1>ファイル共有ページ</h1>
-    <p>以下のリンクをクリックしてファイルをダウンロードしてください。</p>
+    <p>秋田県横手市の横手いこいの森の散策マップを作成しました。ご自由にご活用ください。</p>
     <a href="https://drive.google.com/file/d/1w_cso4MLOjTs2naXAkbVrH1MMfx364Ly/view?usp=sharing" download>横手いこいの森散策マップ.PDF</a>
 </body>
 </html>
