--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <p>秋田県横手市の横手いこいの森の散策マップを作成しました。ご自由にご活用ください。</p>
     <p>ただし、この地図を使用したうえでのいかなる損害についても作成者は責任を負いません。</p>
     <p> 作成者：くまそう（YAMAP ID : 663936）(Xアカウント : @tori_atAKITA)</p>
+
+    <img src="images/横手いこいの森散策マップ非公式20241028.jpg" alt="横手いこいの森散策マップ(非公式)" width="500">
+    
     <a href="https://drive.google.com/file/d/1w_cso4MLOjTs2naXAkbVrH1MMfx364Ly/view?usp=sharing" download>横手いこいの森散策マップ.PDF</a>
 </body>
 </html>
