--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <p>秋田県横手市の横手いこいの森の散策マップを作成しました。ご自由にご活用ください。</p>
     <p>ただし、この地図を使用したうえでのいかなる損害についても作成者は責任を負いません。</p>
     <p> 作成者：くまそう（YAMAP ID : 663936）(Xアカウント : @tori_atAKITA)</p>
+    <p>作成日 : </p>
 
     <img src="images/20241028.jpg" alt="横手いこいの森散策マップ非公式" width="500">
 
