--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <h1>横手いこいの森散策マップ（非公式）</h1>
     <p>秋田県横手市の横手いこいの森の散策マップを作成しました。ご自由にご活用ください。</p>
-    <p>ただし、この地図を使用したうえでのいかなる損害についても作成者は責任を負いません。</p>
+    <p>ただし、この地図を使用したうえで発生したいかなる損害についても作成者は責任を負いません。</p>
     <p>作成者：くまそう（<a href="https://yamap.com/users/663936" target="_blank">YAMAP</a>）(X: <a href="https://twitter.com/tori_atAKITA" target="_blank">https://twitter.com/tori_atAKITA</a>)</p>
     <p>作成日 : 2024年10月28日</p>
     <p><a href="https://yamap.com/moments/1137322" target="_blank">横手いこいの森の紹介</a></p>
