--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p>ただし、この地図を使用したうえで発生したいかなる損害についても作成者は責任を負いません。</p>
     <p>作成者：くまそう（<a href="https://yamap.com/users/663936" target="_blank">YAMAP</a>）(X: <a href="https://twitter.com/tori_atAKITA" target="_blank">https://twitter.com/tori_atAKITA</a>)</p>
     <p>作成日 : 2024年10月28日</p>
-    <p><a href="https://yamap.com/moments/1137322" target="_blank">横手いこいの森の紹介</a></p>
+    <p><a href="https://www.city.yokote.lg.jp/kanko/1004859/1003620.html" target="_blank">横手いこいの森の紹介(横手市公式サイト)</a></p>
 
     <img src="images/20241028.jpg" alt="横手いこいの森散策マップ非公式" width="500">
 
