--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 
     <img src="images/20241028.jpg" alt="横手いこいの森散策マップ非公式" width="500">
 
-    <p><a href="https://drive.google.com/file/d/1w_cso4MLOjTs2naXAkbVrH1MMfx364Ly/view?usp=sharing" download>横手いこいの森散策マップ.PDF</a></p>
+    <p><a href="https://kumasou.github.io/map20241028.PDF" download>横手いこいの森散策マップ.PDF</a></p>
 </body>
 </html>
