--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 
     <img src="images/20241028.jpg" alt="横手いこいの森散策マップ非公式" width="500">
 
-    <p><a href="https://kumasou.github.io/map20241028.PDF" download>横手いこいの森散策マップ.PDF</a></p>
+    <p><a href="https://kumasou.github.io/map20241028.PDF" download>map20241028.pdf</a></p>
 </body>
 </html>
