--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p><a href="https://www.city.yokote.lg.jp/kanko/1004859/1003620.html" target="_blank">横手いこいの森の紹介(横手市公式サイト)</a></p>
 
     <img src="images/20241028.jpg" alt="横手いこいの森散策マップ非公式" width="500">
-
-    <p><a href="https://kumasou.github.io/map20241028.PDF" download>map20241028.pdf</a></p>
+    
+    <p><a href="https://kumasou.github.io/map20241028.pdf" download="map20241028.pdf">横手いこいの森散策マップ.PDF</a></p>
 </body>
 </html>
