--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
     <img src="images/20241028.jpg" alt="横手いこいの森散策マップ非公式" width="500">
     
     <p><a href="https://kumasou.github.io/map20241028.pdf" download="map20241028.pdf">横手いこいの森散策マップ.PDF</a></p>
+    <p>↑クリックするとダウンロードできます(1,071kB)</p>
 </body>
 </html>
